src/backend/envoy/envoy.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 8081 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: ingress_http
                http_filters:
                  - name: envoy.filters.http.jwt_authn
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
                      providers:
                        default_provider:
                          payload_in_metadata: 'payload'
                          issuer: "auth-service"
                          remote_jwks:
                            http_uri:
                              uri: "http://localhost:8080/.well-known/jwks.json"
                              cluster: auth-service
                              timeout: 1s
                            cache_duration:
                              seconds: 900
                            async_fetch:
                              fast_listener: false
                          from_headers:
                          - name: Authorization
                            value_prefix: "Bearer "
                      requirement_map:
                        default_req:
                          provider_name: default_provider
                  - name: envoy.filters.http.router
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: auth-service
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: '/hello'
                          route:
                            cluster: auth-service
                          typed_per_filter_config:
                            envoy.filters.http.jwt_authn:
                              '@type': type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.PerRouteConfig
                              requirement_name: 'default_req'
                        # Public route (no authentication needed)
                        - match:
                            prefix: '/'
                          route:
                            cluster: auth-service
                          typed_per_filter_config: {}  # No JWT validation applied here (public route)

                        # Private route (JWT authentication required)
  clusters:
    - name: auth-service
      connect_timeout: 1s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: auth-service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: auth-service
                      port_value: 8080
